[package]
name = "sugma"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.1", features = ["derive"] }
image = "0.24.7"
nalgebra = { version = "0.32.3", features = ["serde-serialize"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
